--- a/GitlabCloneTool/GitlabCloneTool.csproj
+++ b/GitlabCloneTool/GitlabCloneTool.csproj
@@ -46,9 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GitlabGroup.cs" />
+    <Compile Include="DataModels\Gitlab\GitlabGroup.cs" />
     <Compile Include="GitlabGroupsProcessor.cs" />
-    <Compile Include="GroupInfo.cs" />
+    <Compile Include="DataModels\GroupInfo.cs" />
     <Compile Include="MainConfig.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -58,5 +58,6 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
