--- a/GitlabCloneTool/GitlabCloneTool.csproj
+++ b/GitlabCloneTool/GitlabCloneTool.csproj
@@ -48,7 +48,13 @@
   <ItemGroup>
     <Compile Include="AzureGroupsProcessor.cs" />
     <Compile Include="DataModels\Azure\AzureTeam.cs" />
+    <Compile Include="DataModels\Gitlab\ContainerExpirationPolicy.cs" />
+    <Compile Include="DataModels\Gitlab\ForkedFromProject.cs" />
     <Compile Include="DataModels\Gitlab\GitlabGroup.cs" />
+    <Compile Include="DataModels\Gitlab\GitlabGroupDetails.cs" />
+    <Compile Include="DataModels\Gitlab\Links.cs" />
+    <Compile Include="DataModels\Gitlab\Namespace.cs" />
+    <Compile Include="DataModels\Gitlab\Project.cs" />
     <Compile Include="GitlabGroupsProcessor.cs" />
     <Compile Include="DataModels\GroupInfo.cs" />
     <Compile Include="GroupsProcessorBase.cs" />
